samples/_failures_safe/1761400473_b52785_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1538e31.c: In function ‘main’:
./samples/SAFE/__tmp_e1538e31.c:186:12: error: missing terminating " character
  186 |     printf("
      |            ^
./samples/SAFE/__tmp_e1538e31.c:186:5: error: expected expression at end of input
  186 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_e1538e31.c:186:5: error: expected declaration or statement at end of input
